# xtodo

./: Cargo.toml  README.md
.cargo/: config.toml
src/: .tasks.json  .tasks2.json  main.rs  todo_colors.rs
